// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropButton close by clicking outside 1`] = `
.c0 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #E15151;
  border-radius: 3.2px;
  color: #444444;
  padding: 2px 14px;
  font-size: 12px;
  line-height: 16px;
  -webkit-transition-property: color,background-color,border-color,box-shadow;
  transition-property: color,background-color,border-color,box-shadow;
  -webkit-transition-duration: 0.1s;
  transition-duration: 0.1s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
}

.c0:hover {
  box-shadow: 0px 0px 0px 2px #E15151;
}

<button
  aria-label="Open Drop"
  class="c0"
  type="button"
>
  Dropper
</button>
`;

exports[`DropButton close by clicking outside 2`] = `
@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {

}

<div
  id="drop-contents"
>
  Drop Contents
</div>
`;

exports[`DropButton close by clicking outside 3`] = `""`;

exports[`DropButton closed 1`] = `
.c0 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #E15151;
  border-radius: 3.2px;
  color: #444444;
  padding: 2px 14px;
  font-size: 12px;
  line-height: 16px;
  -webkit-transition-property: color,background-color,border-color,box-shadow;
  transition-property: color,background-color,border-color,box-shadow;
  -webkit-transition-duration: 0.1s;
  transition-duration: 0.1s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
}

.c0:hover {
  box-shadow: 0px 0px 0px 2px #E15151;
}

<button
  aria-label="Open Drop"
  className="c0"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  type="button"
>
  Dropper
</button>
`;

exports[`DropButton disabled 1`] = `
.c0 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #E15151;
  border-radius: 3.2px;
  color: #444444;
  padding: 2px 14px;
  font-size: 12px;
  line-height: 16px;
  opacity: 0.3;
  cursor: default;
  -webkit-transition-property: color,background-color,border-color,box-shadow;
  transition-property: color,background-color,border-color,box-shadow;
  -webkit-transition-duration: 0.1s;
  transition-duration: 0.1s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
}

<button
  aria-label="Open Drop"
  class="c0"
  disabled=""
  type="button"
>
  Dropper
</button>
`;

exports[`DropButton open and close 1`] = `
.c0 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #E15151;
  border-radius: 3.2px;
  color: #444444;
  padding: 2px 14px;
  font-size: 12px;
  line-height: 16px;
  -webkit-transition-property: color,background-color,border-color,box-shadow;
  transition-property: color,background-color,border-color,box-shadow;
  -webkit-transition-duration: 0.1s;
  transition-duration: 0.1s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
}

.c0:hover {
  box-shadow: 0px 0px 0px 2px #E15151;
}

<button
  aria-label="Open Drop"
  class="c0"
  type="button"
>
  Dropper
</button>
`;

exports[`DropButton open and close 2`] = `
@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {

}

<div
  id="drop-contents"
>
  Drop Contents
</div>
`;

exports[`DropButton open and close 3`] = `""`;

exports[`DropButton opened 1`] = `
.c0 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #E15151;
  border-radius: 3.2px;
  color: #444444;
  padding: 2px 14px;
  font-size: 12px;
  line-height: 16px;
  -webkit-transition-property: color,background-color,border-color,box-shadow;
  transition-property: color,background-color,border-color,box-shadow;
  -webkit-transition-duration: 0.1s;
  transition-duration: 0.1s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
}

.c0:hover {
  box-shadow: 0px 0px 0px 2px #E15151;
}

<button
  aria-label="Open Drop"
  className="c0"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  type="button"
>
  Dropper
</button>
`;

exports[`DropButton opened ref 1`] = `
.c0 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #E15151;
  border-radius: 3.2px;
  color: #444444;
  padding: 2px 14px;
  font-size: 12px;
  line-height: 16px;
  -webkit-transition-property: color,background-color,border-color,box-shadow;
  transition-property: color,background-color,border-color,box-shadow;
  -webkit-transition-duration: 0.1s;
  transition-duration: 0.1s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
}

.c0:hover {
  box-shadow: 0px 0px 0px 2px #E15151;
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {

}

<button
  aria-label="Open Drop"
  class="c0"
  type="button"
>
  Dropper
</button>
`;

exports[`DropButton opened ref 2`] = `
@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {

}

<div
  id="drop-contents"
>
  Drop Contents
</div>
`;

exports[`DropButton opened ref 3`] = `""`;

exports[`DropButton ref function 1`] = `
.c0 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #E15151;
  border-radius: 3.2px;
  color: #444444;
  padding: 2px 14px;
  font-size: 12px;
  line-height: 16px;
  -webkit-transition-property: color,background-color,border-color,box-shadow;
  transition-property: color,background-color,border-color,box-shadow;
  -webkit-transition-duration: 0.1s;
  transition-duration: 0.1s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
}

.c0:hover {
  box-shadow: 0px 0px 0px 2px #E15151;
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {

}

<button
  aria-label="Open Drop"
  class="c0"
  type="button"
>
  Dropper
</button>
`;

exports[`DropButton ref function 2`] = `
@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {

}

<div
  id="drop-contents"
>
  Drop Contents
</div>
`;

exports[`DropButton ref function 3`] = `""`;
